--- a/.travis.yml
+++ b/.travis.yml
@@ -6,29 +6,30 @@ matrix:
   fast_finish: true
   include:
     - php: 5.6
-    - php: 7.0
-    - env:
-      - CODE_COVERAGE_LOG: true
+      env:
       - CS_CHECK_ENABLED: true
-    - php: hhvm
-  allow_failures:
+    - php: 7.0
+      env:
+      - CODE_COVERAGE_LOG: true
     - php: hhvm
 
 before_install:
-  - if [[ -z $CODE_COVERAGE_LOG ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
-  - composer install --prefer-source --no-interaction
-
-before_script:
-  - mkdir -p build/logs
+  - if [[ $CODE_COVERAGE_LOG != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
   - composer self-update
+  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then composer require --no-update satooshi/php-coveralls:dev-master; fi
+  - if [[ $CS_CHECK_ENABLED == 'true' ]]; then composer require squizlabs/php_codesniffer:~2.5; fi
+
+install:
+  - composer install --prefer-source --no-interaction
+  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then mkdir -p coverage; fi
 
 script:
-  - if [[ -z $CODE_COVERAGE_LOG ]]; then ./vendor/bin/phpunit --verbose; fi;
-  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml; fi;
-  - if [[ $CS_CHECK_ENABLED == 'true' ]]; then ./vendor/bin/phpcs --standard=PSR2 --ignore=vendor/* src tests; fi
+  - if [[ $CODE_COVERAGE_LOG != 'true' ]]; then php vendor/bin/phpunit --verbose; fi;
+  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then php vendor/bin/phpunit --coverage-clover coverage/clover.xml; fi;
+  - if [[ $CS_CHECK_ENABLED == 'true' ]]; then php vendor/bin/phpcs --standard=PSR2 --ignore=vendor/* src tests; fi
 
-after_success:
-  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then travis_retry php vendor/bin/coveralls -v; fi
+after_script:
+  - if [[ $CODE_COVERAGE_LOG == 'true' ]]; then php vendor/bin/coveralls; fi
 
 notififation:
   on_success: never
